# dirhandle-rs

./: CLAUDE.md  Cargo.toml  README.md
doc/design/: dirfd.md  entry-ext.md  iteration.md  open-handles.md  state-tracking.md
src/: dirhandle.rs  lib.rs
